2010-11-08  Raúl Mateos <raulofpandora@gmail.com>

	* pandora_console_install: Updated year/version and link to update script

	* extras/pandoradb_migrate_v3.1_to_v3.2.sql: Updated news to 3.2 version.

2010-11-08  Raúl Mateos <raulofpandora@gmail.com>

	* pandoradb.sql. pandoradb_data.sql, pandora_console_install: Updated
	year/version

2010-11-07  Raúl Mateos <raulofpandora@gmail.com>

	* DEBIAN/makde_deb_package.sh, DEBIAN/control: Updated year/version	

2010-11-05  Sergio Martin <sergio.martin@artica.es>

	* include/languages/nb.po
	include/languages/en.po
	include/languages/mr.po
	include/languages/nb.mo
	include/languages/en.mo
	include/languages/mr.mo: Added few new language
	po and mo files

2010-11-05  Sergio Martin <sergio.martin@artica.es>

	* include/languages/cs.po
	include/languages/et.mo
	include/languages/pt_BR.po
	include/languages/nl.mo
	include/languages/es.po
	include/languages/pl.mo
	include/languages/it.mo
	include/languages/ko.po
	include/languages/sl.mo
	include/languages/sk.po
	include/languages/uk.po
	include/languages/ro.po
	include/languages/pt.mo
	include/languages/ast.mo
	include/languages/en_AU.mo
	include/languages/bg.mo
	include/languages/index.pot
	include/languages/bn.po
	include/languages/ar.po
	include/languages/cs.mo
	include/languages/pt_BR.mo
	include/languages/es.mo
	include/languages/ko.mo
	include/languages/fr.po
	include/languages/sk.mo
	include/languages/uk.mo
	include/languages/ro.mo
	include/languages/ca.po
	include/languages/da.po
	include/languages/tr.po
	include/languages/sv.po
	include/languages/de.po
	include/languages/ja.po
	include/languages/zh_TW.po
	include/languages/bn.mo
	include/languages/he.po
	include/languages/fi.po
	include/languages/ar.mo
	include/languages/hi.po
	include/languages/zh_CN.po
	include/languages/fr.mo
	include/languages/te.po
	include/languages/eu.po
	include/languages/en_GB.po
	include/languages/hu.po
	include/languages/ca.mo
	include/languages/da.mo
	include/languages/tr.mo